@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectSession>
-    <Version Value="11"/>
+    <Version Value="12"/>
     <BuildModes Active="Default"/>
     <Units Count="129">
       <Unit0>
@@ -151,8 +151,7 @@
       <Unit19>
         <Filename Value="testApp/TestApplication.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="206"/>
         <CursorPos X="30" Y="223"/>
         <UsageCount Value="106"/>
@@ -214,17 +213,17 @@
       </Unit26>
       <Unit27>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="1504"/>
-        <CursorPos Y="1534"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="980"/>
+        <CursorPos X="20" Y="1006"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="471"/>
-          <CursorPos X="3" Y="484"/>
+          <TopLine Value="799"/>
+          <CursorPos X="3" Y="805"/>
         </ExtraEditor1>
         <UsageCount Value="40"/>
+        <Loaded Value="True"/>
       </Unit27>
       <Unit28>
         <Filename Value="../client/FBMessages.pas"/>
@@ -235,9 +234,9 @@
       </Unit28>
       <Unit29>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="769"/>
-        <CursorPos Y="789"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="548"/>
+        <CursorPos X="3" Y="542"/>
         <UsageCount Value="53"/>
         <Loaded Value="True"/>
       </Unit29>
@@ -284,7 +283,7 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/FBStatement.pas"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="304"/>
         <CursorPos Y="318"/>
         <UsageCount Value="32"/>
@@ -453,7 +452,7 @@
       <Unit60>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="295"/>
+        <TopLine Value="294"/>
         <CursorPos X="61" Y="310"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -522,9 +521,12 @@
       </Unit68>
       <Unit69>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="-1"/>
-        <CursorPos Y="24"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="16"/>
+        <CursorPos X="72" Y="40"/>
         <UsageCount Value="12"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit69>
       <Unit70>
@@ -947,129 +949,128 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="279" Column="15" TopLine="262"/>
+        <Filename Value="testApp/TestApplication.pas"/>
+        <Caret Line="345" Column="12" TopLine="320"/>
       </Position1>
       <Position2>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1370" Column="22" TopLine="1349"/>
+        <Filename Value="testApp/TestApplication.pas"/>
+        <Caret Line="200" Column="33" TopLine="193"/>
       </Position2>
       <Position3>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="280" Column="14" TopLine="263"/>
+        <Filename Value="testApp/TestApplication.pas"/>
+        <Caret Line="330" Column="27" TopLine="314"/>
       </Position3>
       <Position4>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="1423" Column="2" TopLine="1416"/>
+        <Filename Value="testApp/TestApplication.pas"/>
+        <Caret Line="319" Column="43" TopLine="302"/>
       </Position4>
       <Position5>
-        <Filename Value="../client/FBStatement.pas"/>
-        <Caret Line="243" Column="45" TopLine="233"/>
+        <Filename Value="testApp/TestApplication.pas"/>
+        <Caret Line="338" TopLine="322"/>
       </Position5>
       <Position6>
-        <Filename Value="../client/FBStatement.pas"/>
-        <Caret Line="116" Column="60" TopLine="103"/>
+        <Filename Value="Test20.pas"/>
+        <Caret Line="135" TopLine="120"/>
       </Position6>
       <Position7>
         <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="241" Column="16" TopLine="223"/>
+        <Caret Line="256" TopLine="237"/>
       </Position7>
       <Position8>
         <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="240" Column="21" TopLine="218"/>
+        <Caret Line="278" Column="3" TopLine="276"/>
       </Position8>
       <Position9>
         <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="243" Column="29" TopLine="224"/>
+        <Caret Line="310" TopLine="279"/>
       </Position9>
       <Position10>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="246" Column="33" TopLine="233"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="481" Column="57" TopLine="471"/>
       </Position10>
       <Position11>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="252" Column="24" TopLine="242"/>
+        <Filename Value="../client/FBSQLData.pas"/>
       </Position11>
       <Position12>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="145" TopLine="124"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="971" Column="20" TopLine="945"/>
       </Position12>
       <Position13>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="197" Column="51" TopLine="179"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="978" Column="20" TopLine="952"/>
       </Position13>
       <Position14>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="254" Column="51" TopLine="238"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="981" Column="20" TopLine="955"/>
       </Position14>
       <Position15>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="275" Column="13" TopLine="259"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="996" Column="20" TopLine="970"/>
       </Position15>
       <Position16>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="281" Column="13" TopLine="265"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1003" Column="20" TopLine="977"/>
       </Position16>
       <Position17>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="137" Column="28" TopLine="114"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1006" Column="20" TopLine="980"/>
       </Position17>
       <Position18>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="65" Column="27" TopLine="58"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1159" Column="26" TopLine="1133"/>
       </Position18>
       <Position19>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="281" TopLine="265"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1197" Column="24" TopLine="1171"/>
       </Position19>
       <Position20>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="93" Column="23" TopLine="85"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1376" Column="24" TopLine="1350"/>
       </Position20>
       <Position21>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="314" TopLine="293"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1379" Column="24" TopLine="1353"/>
       </Position21>
       <Position22>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="345" Column="12" TopLine="320"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1382" Column="24" TopLine="1356"/>
       </Position22>
       <Position23>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="200" Column="33" TopLine="193"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1386" Column="43" TopLine="1365"/>
       </Position23>
       <Position24>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="330" Column="27" TopLine="314"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="971" Column="20" TopLine="955"/>
       </Position24>
       <Position25>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="319" Column="43" TopLine="302"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="978" Column="20" TopLine="955"/>
       </Position25>
       <Position26>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="338" TopLine="322"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="981" Column="20" TopLine="955"/>
       </Position26>
       <Position27>
-        <Filename Value="Test20.pas"/>
-        <Caret Line="135" TopLine="120"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="996" Column="20" TopLine="970"/>
       </Position27>
       <Position28>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="256" TopLine="237"/>
+        <Filename Value="../client/FBSQLData.pas"/>
+        <Caret Line="1003" Column="20" TopLine="977"/>
       </Position28>
       <Position29>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="278" Column="3" TopLine="276"/>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="789" TopLine="769"/>
       </Position29>
       <Position30>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="310" TopLine="279"/>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="602" Column="40" TopLine="581"/>
       </Position30>
     </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
-      <Modes Count="0" ActiveMode="default"/>
+      <Modes ActiveMode="default"/>
     </RunParams>
   </ProjectSession>
 </CONFIG>
