@@ -36,6 +36,9 @@ FBINTF Change Log  version          (1.3-1 Build 12696) Wed, 28 Jul 2021 23:16:5
 6. New IStatement method: function GetSQLStatementTypeName: AnsiString;
    Returns SQL Statement type as a text string;
 
+7. ISQLData.AsInteger and AsInt64 now use "Round" to convert a float field to
+   an integer instead of "trunc". This is for compatibility with TFloatField.AsInteger.
+
 FBINTF Change Log  version          (1.2-1 Build 12552) Wed, 09 Jun 2021 13:05:40 +0100
 
 1. Big fix for Firebird 4.0. A internal change in Firebird 4.0.0 from RC1 flushed out a 
